Update paths, tried to fix video

--- a/site/config-de.json
+++ b/site/config-de.json
@@ -9,7 +9,7 @@
   "contact": {
     "linkedin": "https://www.linkedin.com/in/gustavszb/",
     "github": "https://github.com/Gustav04szb",
-    "discord": "https://discord.gg/mYGdMyu5",
+    "discord": "https://discord.com/users/477465707219648522",
     "email": "mailto:me@gustavSZB.com"
   },
   "content": {
